# condevofm_ts_dev

./: README.md  dev.ipynb  pyproject.toml
condevofm/: __init__.py
condevofm/atoms/: __init__.py  calculate.py  constrain.py  evaluate.py  optimize.py  ts.py
condevofm/diffusion/: __init__.py  ggddim.py  ggdm.py
condevofm/es/: __init__.py  charlx.py
condevofm/es/guidance/: __init__.py  condition.py
condevofm/utils/: __init__.py  run.py  view.py
examples/: __init__.py  tutorial.ipynb
examples/clusters/: __init__.py  au-cluster.py  lj-cluster.py  utils.py
examples/monolayers/: __init__.py  mos2-monolayer.py  utils.py
examples/monolayers/founders/: MoS2_5x5x1_3v-s2.vasp  MoS2_6x6x1_4v-s2.vasp  MoS2_7x7x1_5v-s2.vasp  MoS2_8x8x1_6v-s2.vasp
examples/output/Au-13_P-16_G-3_F-0.001_S-100_U-2.738/: ES_CHARLX-objective_minimize_eigenval.h5
examples/output/Au-13_P-16_G-5_F-0.001_S-1000_U-2.738/: ES_CHARLX-objective_evaluate_population_with_calc.h5
examples/output/Au-13_P-16_G-5_F-0.001_S-500_U-2.738/: ES_CHARLX-objective_evaluate_population_with_calc.h5
examples/output/Au-13_P-20_G-10_F-0.001_S-2500_U-2.738/: ES_CHARLX-objective_evaluate_population_with_calc.h5
examples/output/Au-13_P-20_G-10_F-0.001_S-500_U-2.738/: ES_CHARLX-objective_evaluate_population_with_calc.h5
examples/output/Au-13_P-32_G-10_F-0.001_S-5000_U-2.738/: ES_CHARLX-objective_evaluate_population_with_calc.h5
examples/output/Au-13_P-32_G-15_F-0.001_S-2500_U-2.738/: ES_CHARLX-objective_evaluate_population_with_calc.h5
examples/surfaces/: __init__.py  aus-surface.py  utils.py
(+1 files in other folders)
